feat(triggers): introduce stateful trigger (#208)